Add: find by pretty name and consistency features